syntax_errors_utf8.txt
--- Syntax Error in admin_portal.html (Script 8) ---
C:\Users\one\Desktop\RetailMedia_System\temp_check_admin_portal.html_8.js:687
                const agencyRes = await fetch('/api/admin/agency');
                      ^

SyntaxError: Identifier 'agencyRes' has already been declared
    at wrapSafe (node:internal/modules/cjs/loader:1692:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v24.13.0

--- Syntax Error in advertiser_dashboard.html (Script 12) ---
C:\Users\one\Desktop\RetailMedia_System\temp_check_advertiser_dashboard.html_12.js:20
        alert("【配信・広告審査基準】
              ^^^^^^^^^^^^

SyntaxError: Invalid or unexpected token
    at wrapSafe (node:internal/modules/cjs/loader:1692:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v24.13.0

--- Syntax Error in ad_dashboard.html (Script 16) ---
C:\Users\one\Desktop\RetailMedia_System\temp_check_ad_dashboard.html_16.js:20
        alert("【配信・広告審査基準】
              ^^^^^^^^^^^^

SyntaxError: Invalid or unexpected token
    at wrapSafe (node:internal/modules/cjs/loader:1692:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v24.13.0

--- Syntax Error in anywhere_retail.html (Script 8) ---
C:\Users\one\Desktop\RetailMedia_System\temp_check_anywhere_retail.html_8.js:73
            const res = await fetch(/api/retailer/dashboard?store_id=);
                                    ^

SyntaxError: Invalid regular expression flags
    at wrapSafe (node:internal/modules/cjs/loader:1692:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v24.13.0

--- Syntax Error in creator_portal.html (Script 11) ---
C:\Users\one\Desktop\RetailMedia_System\temp_check_creator_portal.html_11.js:20
        alert("【配信・広告審査基準】
              ^^^^^^^^^^^^

SyntaxError: Invalid or unexpected token
    at wrapSafe (node:internal/modules/cjs/loader:1692:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v24.13.0

--- Syntax Error in index.html (Script 0) ---
C:\Users\one\Desktop\RetailMedia_System\temp_check_index.html_0.js:3
      "@context": "https://schema.org",
                ^

SyntaxError: Unexpected token ':'
    at wrapSafe (node:internal/modules/cjs/loader:1692:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v24.13.0

--- Syntax Error in index.html (Script 1) ---
C:\Users\one\Desktop\RetailMedia_System\temp_check_index.html_1.js:3
      "@context": "https://schema.org",
                ^

SyntaxError: Unexpected token ':'
    at wrapSafe (node:internal/modules/cjs/loader:1692:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v24.13.0

--- Syntax Error in index.html (Script 2) ---
C:\Users\one\Desktop\RetailMedia_System\temp_check_index.html_2.js:3
      "@context": "https://schema.org",
                ^

SyntaxError: Unexpected token ':'
    at wrapSafe (node:internal/modules/cjs/loader:1692:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v24.13.0

--- Syntax Error in manualhelp.html (Script 11) ---
C:\Users\one\Desktop\RetailMedia_System\temp_check_manualhelp.html_11.js:30
                Swal.fire('解析成功', ${addedSteps}個の目次チャプターを自動生成しました！<br>カテゴリ: [], 'success');
                                  ^

SyntaxError: missing ) after argument list
    at wrapSafe (node:internal/modules/cjs/loader:1692:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v24.13.0

--- Syntax Error in retailer_portal.html (Script 5) ---
C:\Users\one\Desktop\RetailMedia_System\temp_check_retailer_portal.html_5.js:177
        alert("【配信・広告審査基準】
              ^^^^^^^^^^^^

SyntaxError: Invalid or unexpected token
    at wrapSafe (node:internal/modules/cjs/loader:1692:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v24.13.0

--- Syntax Error in review.html (Script 2) ---
C:\Users\one\Desktop\RetailMedia_System\temp_check_review.html_2.js:77
            const res = await fetch('/api/kyc');
                        ^^^^^

SyntaxError: await is only valid in async functions and the top level bodies of modules
    at wrapSafe (node:internal/modules/cjs/loader:1692:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v24.13.0

